# github-actions-tryout

./: README.md  pyproject.toml  tox.ini  tox_unused.ini
.github/workflows/: tests.yml
src/github_actions_tryout.egg-info/: PKG-INFO  SOURCES.txt
tests/: settings.py  test_versions.py
